[package]
name = "bee-event"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "A type-driven event dispatcher for the Bee project"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "event", "dispatch"]
homepage = "https://www.iota.org"

[dependencies]
dashmap = "3.11"
internment = "0.3"
lazy_static = "1.4"
