[package]
name = "bee-signing"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "signing"]
homepage = "https://www.iota.org"

[dependencies]
bee-crypto = { path = "../../bee-crypto" }
bee-signing-derive = { path = "../bee-signing-derive" }
bee-ternary = { git = "https://github.com/iotaledger/bee.git" }
bee-ternary-ext = { path = "../../bee-ternary-ext" }

rand = "0.7"
sha3 = "0.9.0"
zeroize = "1.1.0"
