[package]
name = "bee-storage-rocksdb"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "storage", "rocksdb"]
homepage = "https://www.iota.org"

[dependencies]
bee-crypto = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-ledger = { path = "../../bee-ledger" }
bee-protocol = { path = "../../bee-protocol" }
bee-storage = { path = "../bee-storage" }
bee-ternary = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-transaction = { path = "../../bee-transaction" }

async-trait = "0.1.36"
rocksdb = { version = "0.15.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
