[package]
name = "bee-storage-rocksdb"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "storage", "rocksdb"]
homepage = "https://www.iota.org"

[dependencies]
bee-common-ext = { path = "../../bee-common-ext" }
bee-crypto = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-ledger = { path = "../../bee-ledger" }
bee-message = { path = "../../bee-message" }
bee-protocol = { path = "../../bee-protocol" }
bee-storage = { path = "../bee-storage" }
bee-ternary = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }

async-trait = "0.1"
blake2 = "0.9"
num_cpus = "1.13"
rocksdb = { version = "0.15", default-features = false }
serde = { version = "1.0", features = ["derive"] }
